# lume

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  vesl.toml.example
.github/workflows/: ci.yml
assets/: CHECKSUMS.sha256  anchor.jam  beak.jam  grip.jam  ink.jam  sigil.jam  vigil.jam
crates/nock-noun-rs/: Cargo.toml  README.md
crates/nock-noun-rs/src/: lib.rs
crates/nockchain-client-rs/: Cargo.toml  README.md
crates/nockchain-client-rs/src/: chain.rs  lib.rs  note_data.rs  types.rs  wallet.rs
crates/nockchain-tip5-rs/: Cargo.toml  README.md
crates/nockchain-tip5-rs/src/: lib.rs
crates/vesl-core/: Cargo.toml
crates/vesl-core/src/: config.rs  forge.rs  lib.rs  noun_builder.rs  settle.rs  signing.rs  tx_builder.rs  types.rs
crates/vesl-core/src/graft_pokes/: forge.rs  guard.rs  mint.rs  mod.rs  settle.rs
crates/vesl-mantle/: Cargo.toml
crates/vesl-mantle/src/: anchor.rs  beak.rs  grip.rs  ink.rs  kraken.rs  lib.rs  sigil.rs  types.rs  vigil.rs
docker/: README.md
docs/: graft-manifest.md
hoon/lib/: beak-kernel.hoon  grip-kernel.hoon  ink-kernel.hoon  lume-entrypoint.hoon  lume-logic.hoon  lume-prover.hoon  lume-stark-verifier.hoon  lume-verifier.hoon  vesl-entrypoint.hoon  vesl-graft.hoon  vesl-ink.hoon  vesl-logic.hoon  vesl-merkle.hoon  vesl-prover.hoon  vesl-stark-verifier.hoon  vesl-test.hoon  vesl-verifier.hoon
hoon/sur/: lume.hoon  vesl.hoon
hull/: Cargo.toml
hull-rag/src/: api.rs  chain.rs  main.rs  noun_builder.rs  wallet_kernel.rs
hull-rag/tests/: e2e_adversarial.rs  e2e_fakenet.rs  e2e_forge.rs  e2e_pipeline.rs  e2e_prover.rs
hull/src/: api.rs  chain.rs  config.rs  lib.rs  llm.rs  main.rs  merkle.rs  noun_builder.rs  signing.rs  tx_builder.rs  types.rs  wallet_kernel.rs
hull/tests/: e2e_adversarial.rs  e2e_fakenet.rs  e2e_mantle.rs  e2e_ollama.rs  e2e_pipeline.rs  e2e_prover.rs  test_payload.jam
kernels/beak/: Cargo.toml  build.rs
kernels/beak/src/: lib.rs
kernels/grip/: Cargo.toml  build.rs
kernels/ink/: Cargo.toml  build.rs
kernels/lume/: Cargo.toml  build.rs
kernels/vesl/: Cargo.toml  build.rs
protocol/lib/: README.md  anchor-kernel.hoon  beak-kernel.hoon  forge-graft.hoon  forge-graft.toml  forge-kernel.hoon  grip-kernel.hoon  guard-graft.hoon  guard-graft.toml  guard-kernel.hoon  ink-kernel.hoon  intent-graft.toml  lume-entrypoint.hoon  lume-kernel.hoon  lume-logic.hoon  lume-prover.hoon  lume-stark-verifier.hoon  lume-verifier.hoon  mint-graft.hoon  mint-graft.toml  rag-logic.hoon  settle-graft.hoon  settle-graft.toml  settle-kernel.hoon  sigil-kernel.hoon  vesl-entrypoint.hoon  vesl-graft.hoon  vesl-graft.toml  vesl-ink.hoon  vesl-kernel.hoon  vesl-logic.hoon  vesl-lower.hoon  vesl-merkle.hoon  vesl-prover.hoon  vesl-sigil.hoon  vesl-stark-verifier.hoon  vesl-test.hoon  vigil-kernel.hoon
protocol/sur/: lume.hoon
protocol/tests/: cross-vm.hoon  example-vesl-test.hoon  prove-commitment.hoon  prove-standard.hoon  prove-trivial.hoon  prove-verify.hoon  red-team.hoon  root-hash.hoon  settle-note.hoon  test-entrypoint.hoon  test-graft-generic.hoon  test-graft-security.hoon  test-graft.hoon  test-replay-twice.hoon  verify-manifest.hoon  verify-retrieval.hoon
scripts/: .env.fakenet  demo.sh  diag-reproduce.sh  fakenet-harness.sh  setup-hoon-tree.sh
templates/: GRAFTING.md  README.md
templates/counter/: Cargo.toml  README.md  build.rs
templates/counter/hoon/app/: app.hoon
templates/counter/src/: main.rs
templates/data-registry/: Cargo.toml  README.md
templates/data-registry/hoon/app/: app.hoon
templates/data-registry/src/: main.rs
templates/graft-anchor/: build.rs
templates/graft-anchor/hoon/app/: app.hoon
templates/graft-anchor/hoon/lib/: vesl-logic.hoon
templates/graft-beak/: Cargo.toml  README.md  build.rs
templates/graft-beak/hoon/app/: app.hoon
templates/graft-beak/hoon/lib/: lib.hoon
templates/graft-beak/hoon/sur/: vesl.hoon
templates/graft-beak/src/: main.rs
templates/graft-hash-gate/: Cargo.toml
templates/graft-hash-gate/hoon/app/: app.hoon
templates/graft-hash-gate/src/: main.rs
templates/graft-ink/: Cargo.toml  README.md  build.rs
templates/graft-ink/hoon/app/: app.hoon
templates/graft-ink/hoon/lib/: vesl-logic.hoon
templates/graft-ink/src/: main.rs
templates/graft-intent/: Cargo.toml  README.md  app.nock  build.rs
templates/graft-intent/hoon/app/: app.hoon
templates/graft-intent/hoon/lib/: vesl-graft.hoon
templates/graft-intent/src/: main.rs
templates/graft-mint/: Cargo.toml  README.md  build.rs
templates/graft-mint/hoon/app/: app.hoon
templates/graft-mint/src/: main.rs
templates/graft-scaffold/: Cargo.toml  README.md
templates/graft-scaffold/hoon/app/: app.hoon
templates/graft-scaffold/hoon/common/: zeke.hoon
templates/graft-scaffold/hoon/common/ztd/: eight.hoon  five.hoon  four.hoon  one.hoon  seven.hoon  six.hoon  three.hoon  two.hoon
templates/graft-scaffold/hoon/lib/: vesl-graft.hoon
templates/graft-scaffold/src/: main.rs
templates/graft-settle/: Cargo.toml  README.md  build.rs
templates/graft-settle/hoon/app/: app.hoon
templates/graft-settle/hoon/lib/: settle-graft.hoon  vesl-graft.hoon
templates/graft-settle/src/: main.rs
templates/graft-sigil/: README.md  build.rs
templates/graft-sigil/hoon/app/: app.hoon
templates/settle-report/: Cargo.toml  README.md
templates/settle-report/hoon/app/: app.hoon
templates/settle-report/src/: main.rs
vessel/: Cargo.toml
vessel/src/: api.rs  chain.rs  lib.rs  llm.rs  main.rs  merkle.rs  noun_builder.rs  types.rs  wallet.rs  wallet_kernel.rs
vessel/tests/: e2e_adversarial.rs  e2e_fakenet.rs  e2e_pipeline.rs  e2e_prover.rs
