[package]
name = "graft-mint"
version = "0.1.0"
edition = "2021"
authors = ["Vesl Examples <examples@vesl.local>"]
description = "NockApp with Vesl Ink + Grip tentacles grafted in"

[[bin]]
name = "graft-mint"
path = "src/main.rs"

[dependencies]
nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "505c3ea586bacfece2d451fbd01dfa18105facea" }
nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "505c3ea586bacfece2d451fbd01dfa18105facea" }
nockvm_macros = { git = "https://github.com/nockchain/nockchain.git", rev = "505c3ea586bacfece2d451fbd01dfa18105facea" }

# Vesl tentacles — Ink for commitment, Grip for verification
vesl-core = { path = "../../crates/vesl-core" }
nock-noun-rs = { path = "../../crates/nock-noun-rs" }

tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
